--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-!DOCTYPE html>
-<html>
-	<head>
-		<title>Ljiljana Jovanovic</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Ljiljana Jovanovic!</h1>
-				<p>I'm best known ....... <em>A Touch of Evil</em> <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:ljiljana.jovanovic@ymail.com">email</a></li>
-        </ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Ljiljana Jovanovic, Software Engineer
+---
+<div class="blurb">
+	<h1>Hi there, I'm Ljiljana Jovanovic!</h1>
+	<p>I'm Software Engineer <em>A Touch of Magic</em> Trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
