--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
   <div class="wrapper">
     <header>
-      <h3 class="title">Ljiljana</h3>
+      <h2 class="title">Ljiljana Jovanovic</h2>
     </header>
     <div id="container">
       <p class="tagline"></p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/ljiljana0207" class="code">View ljiljana0207.GitHub.io on GitHub</a>
+          <a href="https://github.com/ljiljana0207" class="code">ljiljana0207.GitHub.io</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -39,15 +39,6 @@
 
            <p> In progress.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About me</h3>
-
-<p> In progress.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CV</h3>
-
-<p> In progress.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
